--- a/src/common/ui/alert/alert.component.scss
+++ b/src/common/ui/alert/alert.component.scss
@@ -25,7 +25,7 @@
 	}
 
 	&__common-icon {
-		padding-right: ( $spacer * .5 );
+		padding-right: ($spacer * 0.5);
 		font-size: $font-size-base;
 	}
 }
