--- a/src/common/ui/forms/field/field.component.scss
+++ b/src/common/ui/forms/field/field.component.scss
@@ -15,7 +15,6 @@
 @import '~bootstrap/scss/custom-forms';
 @import '~bootstrap/scss/input-group';
 
-
 .form-control-info-wrapper {
 	width: 100%;
 	padding-bottom: $icon-size-px;
@@ -24,7 +23,7 @@
 .form-control-info {
 	position: relative;
 	display: inline-block;
-	padding: ( $spacer * 0.5 ) $spacer;
+	padding: ($spacer * 0.5) $spacer;
 	background-color: $secondary;
 	color: $white;
 	border-radius: 3px 3px 3px 0;
@@ -32,7 +31,7 @@
 
 .form-control-info-beak {
 	position: absolute;
-	top: calc( 100% - 1px );
+	top: calc(100% - 1px);
 	left: 0;
 	color: $secondary;
 }
@@ -42,14 +41,13 @@
 
 	&--public {
 		.form-control-case {
-			padding-top: ( $spacer * 1.5 );
+			padding-top: ($spacer * 1.5);
 		}
 
 		.control-label,
 		.form-control {
 			font-size: $font-size-base-public;
 		}
-
 
 		.form-control {
 			height: $input-height-public;
@@ -123,13 +121,13 @@
 		}
 
 		.custom-control-label {
-			padding-right: ( $icon-size-px + ( $spacer * 0.5 ) );
+			padding-right: ($icon-size-px + ($spacer * 0.5));
 			z-index: $zindex-custom-control;
 		}
 	}
 
 	.is-disabled {
-		opacity: .3;
+		opacity: 0.3;
 	}
 }
 
@@ -190,7 +188,7 @@
 	}
 
 	&--with-placeholder {
-		@include placeholder(rgba($input-color, .5));
+		@include placeholder(rgba($input-color, 0.5));
 	}
 }
 
@@ -201,7 +199,7 @@
 
 textarea.form-control {
 	min-height: $input-textarea-min-height;
-	padding: ( ( $spacer * 2 ) + $input-border-width );
+	padding: (($spacer * 2) + $input-border-width);
 	line-height: $input-textarea-line-height;
 	border-color: $input-border-color;
 	border-width: $input-border-width;
@@ -210,12 +208,14 @@ textarea.form-control {
 	&:focus,
 	&.focus,
 	&:hover {
-		padding: ( $spacer * 2 );
+		padding: ($spacer * 2);
 	}
 
 	& + .control-label {
-		top: ( $form-group-padding-top + $spacer + ( $input-border-width * 2 ) ) ; // 26px
-		left: ( ( $spacer * 2 ) + ( $input-border-width * 2 ) );
+		top: (
+			$form-group-padding-top + $spacer + ($input-border-width * 2)
+		); // 26px
+		left: (($spacer * 2) + ($input-border-width * 2));
 	}
 
 	&[disabled] {
@@ -227,7 +227,7 @@ textarea.form-control:focus,
 textarea.form-control.focus,
 textarea.form-control--not-empty {
 	& + .control-label {
-		top: ( $spacer * 1.5 );
+		top: ($spacer * 1.5);
 		left: 0;
 	}
 }
@@ -247,7 +247,7 @@ textarea.form-control--not-empty {
 	position: relative;
 	display: block;
 	top: 0;
-	margin-bottom: ( $spacer * 0.5 );
+	margin-bottom: ($spacer * 0.5);
 }
 
 // States
@@ -327,7 +327,7 @@ textarea.form-control--not-empty {
 
 	& ~ .invalid-feedback {
 		display: none;
-		margin-top: ( $spacer * 0.25 );
+		margin-top: ($spacer * 0.25);
 		font-size: $small-font-size;
 		max-width: $input-width;
 	}
@@ -350,12 +350,12 @@ textarea.form-control--not-empty {
 }
 
 .form-control--with-indentation {
-	padding: 0 ( $spacer * 4.5 ) 0 ( $spacer * 1.5 ) ;
+	padding: 0 ($spacer * 4.5) 0 ($spacer * 1.5);
 
 	&:focus,
 	&.focus,
 	&:hover {
-		padding-top: ( $input-padding-y + $input-border-width );
+		padding-top: ($input-padding-y + $input-border-width);
 	}
 }
 
@@ -363,7 +363,7 @@ textarea.form-control--not-empty {
 .input-group {
 	&--append {
 		.form-control {
-			padding-right: ( $spacer * 2.5 );
+			padding-right: ($spacer * 2.5);
 		}
 	}
 
@@ -402,9 +402,9 @@ textarea.form-control--not-empty {
 	align-items: center;
 	position: absolute;
 	top: 0;
-	padding: 0 ( $spacer * .75 );
-	height: ( $input-height - $input-border-width );
-	line-height: ( $input-height - $input-border-width + 1 );
+	padding: 0 ($spacer * 0.75);
+	height: ($input-height - $input-border-width);
+	line-height: ($input-height - $input-border-width + 1);
 	color: $gray-100;
 	font-size: $input-font-size;
 	pointer-events: none;
@@ -423,7 +423,7 @@ textarea.form-control--not-empty {
 .input-group-append-help {
 	position: absolute;
 	top: $form-group-padding-top;
-	right: -( $input-height );
+	right: -($input-height);
 	width: $input-height;
 	height: $input-height;
 	line-height: $input-height;
@@ -475,11 +475,11 @@ textarea.form-control--not-empty {
 
 .input-group-switch__text {
 	&--prepend {
-		margin-right: ( $spacer * 5 );
+		margin-right: ($spacer * 5);
 	}
 
 	&--append {
-		margin-left: ( $spacer * 5 );
+		margin-left: ($spacer * 5);
 	}
 
 	&--active {
@@ -593,7 +593,7 @@ textarea.form-control--not-empty {
 }
 
 .custom-control-label {
-	padding-left: ( $custom-control-indicator-size-px + ( $spacer * 0.5 ) );
+	padding-left: ($custom-control-indicator-size-px + ($spacer * 0.5));
 	color: $input-color;
 	font-size: $input-font-size;
 	cursor: pointer;
@@ -613,7 +613,7 @@ textarea.form-control--not-empty {
 
 th {
 	.custom-control-label {
-		color: rgba($font-header, .5);
+		color: rgba($font-header, 0.5);
 	}
 }
 
@@ -641,8 +641,15 @@ th {
 		}
 
 		&::after {
-			top: ( $custom-control-indicator-size-px / 2 - $custom-radio-filling-size / 2 + $custom-control-indicator-top);
-			left: ( $custom-control-indicator-size-px / 2 - $custom-radio-filling-size / 2);
+			top: (
+				$custom-control-indicator-size-px / 2 -
+					$custom-radio-filling-size / 2 +
+					$custom-control-indicator-top
+			);
+			left: (
+				$custom-control-indicator-size-px / 2 -
+					$custom-radio-filling-size / 2
+			);
 			width: $custom-radio-filling-size;
 			height: $custom-radio-filling-size;
 			background-color: $custom-radio-control-indicator-checked-bg;
@@ -682,7 +689,7 @@ th {
 
 // Radio group
 .custom-radio-group__item {
-	margin-bottom: ( $spacer * 2.5 );
+	margin-bottom: ($spacer * 2.5);
 }
 
 // Checkbox
@@ -890,7 +897,7 @@ th {
 		&:nth-of-type(1) {
 			.custom-control-input {
 				& + .custom-control-label {
-					padding-right: ( $spacer * 6 ) + ( $custom-switch-width * 0.5 );
+					padding-right: ($spacer * 6) + ($custom-switch-width * 0.5);
 				}
 			}
 		}
@@ -900,7 +907,7 @@ th {
 			margin-left: -$spacer * 7;
 
 			.custom-control-input + .custom-control-label {
-				padding-left: ( $spacer * 6 ) + ( $custom-switch-width * 0.5 );
+				padding-left: ($spacer * 6) + ($custom-switch-width * 0.5);
 
 				&::before {
 					display: block;
@@ -946,7 +953,8 @@ th {
 		&:focus-within {
 			&,
 			& + .custom-radio--switch {
-				.custom-control-input:not([disabled]) + .custom-control-label::before {
+				.custom-control-input:not([disabled])
+					+ .custom-control-label::before {
 					background-color: $custom-switch-bg-interactive;
 				}
 			}
@@ -960,9 +968,9 @@ th {
 
 	.select-icon {
 		position: absolute;
-		top: ( $input-height * 0.5 );
+		top: ($input-height * 0.5);
 		right: 0;
-		padding-right: ( $spacer * 0.5 );
+		padding-right: ($spacer * 0.5);
 		font-weight: $font-weight-bold;
 		pointer-events: none;
 	}
@@ -972,7 +980,7 @@ th {
 	}
 
 	.form-control {
-		padding-right: ( $spacer * 1.25 );
+		padding-right: ($spacer * 1.25);
 		appearance: none;
 
 		&,
@@ -999,7 +1007,7 @@ th {
 // File input
 .custom-file {
 	width: auto;
-	margin-bottom: ( $spacer * 0.5 );
+	margin-bottom: ($spacer * 0.5);
 }
 
 .custom-file-input {
@@ -1043,7 +1051,7 @@ th {
 }
 
 .input-subtext {
-	margin-top: ( $spacer * 0.25 );
+	margin-top: ($spacer * 0.25);
 	font-size: $small-font-size;
 	text-align: justify;
 
