--- a/src/common/ui/button/button.component.scss
+++ b/src/common/ui/button/button.component.scss
@@ -5,7 +5,7 @@
  */
 
 // Core component import
-@use "sass:math";
+@use 'sass:math';
 
 @import 'src/assets/scss/01_base/base.scss';
 
@@ -156,7 +156,7 @@
 
 		&:focus,
 		&.focus {
-			box-shadow: $btn-focus-box-shadow-size rgba($white, .8);
+			box-shadow: $btn-focus-box-shadow-size rgba($white, 0.8);
 		}
 
 		&:hover,
@@ -168,7 +168,7 @@
 		&:not(:disabled):not(.disabled):active,
 		&:not(:disabled):not(.disabled).active {
 			background-color: $secondary-dark;
-			box-shadow: $btn-focus-box-shadow-size rgba($white, .8);
+			box-shadow: $btn-focus-box-shadow-size rgba($white, 0.8);
 		}
 	}
 
@@ -218,7 +218,7 @@
 
 	&-dropdown {
 		min-width: auto;
-		padding-left: ( $spacer * 0.5 );
+		padding-left: ($spacer * 0.5);
 		text-transform: uppercase;
 
 		&:focus,
@@ -268,7 +268,7 @@
 		&.btn-disabled,
 		&[disabled],
 		fieldset[disabled] & {
-			color: rgba($gray-200, .6);
+			color: rgba($gray-200, 0.6);
 			background-color: transparent;
 			pointer-events: none;
 			border-color: $gray-200;
@@ -314,7 +314,11 @@
 
 	&.btn-gradient-primary {
 		color: $white;
-		background: linear-gradient(143deg, $gradient-blue-light 0%, $gradient-blue-dark 100%);
+		background: linear-gradient(
+			143deg,
+			$gradient-blue-light 0%,
+			$gradient-blue-dark 100%
+		);
 		border: none;
 
 		&:focus,
@@ -324,7 +328,11 @@
 		&:focus:active,
 		&:not(:disabled):not(.disabled):active,
 		&:not(:disabled):not(.disabled).active {
-			background: linear-gradient(143deg, darken($gradient-blue-light, 5%) 0%, darken($gradient-blue-dark, 5%) 100%);
+			background: linear-gradient(
+				143deg,
+				darken($gradient-blue-light, 5%) 0%,
+				darken($gradient-blue-dark, 5%) 100%
+			);
 		}
 	}
 
@@ -332,14 +340,14 @@
 		justify-content: space-between;
 		min-width: $btn-width-public;
 		min-height: $btn-height-public;
-		padding: $spacer ( $spacer * 2 );
+		padding: $spacer ($spacer * 2);
 		font-size: $font-size-base-public;
 	}
 
 	&-sm {
 		min-width: auto;
 		min-height: $btn-height-small;
-		padding: ( $spacer * 0.25 ) ( $spacer * 0.5 );
+		padding: ($spacer * 0.25) ($spacer * 0.5);
 		font-size: $small-font-size;
 		line-height: $line-height-sm;
 
@@ -347,27 +355,27 @@
 			font-size: $icon-size-small-px;
 
 			&--left {
-				margin-left:  math.div($spacer, 3) ;
+				margin-left: math.div($spacer, 3);
 			}
 
 			&--right {
-				margin-right:  math.div($spacer, 3) ;
+				margin-right: math.div($spacer, 3);
 			}
 		}
 	}
 
 	&-lg {
 		min-height: $btn-height-large;
-		padding: ( $spacer * 1.25 ) ( $spacer * 2 );
+		padding: ($spacer * 1.25) ($spacer * 2);
 		font-size: $large-font-size;
 
 		.btn__icon {
 			&--left {
-				margin-left: ( $spacer * 2 );
+				margin-left: ($spacer * 2);
 			}
 
 			&--right {
-				margin-right: ( $spacer * 2 );
+				margin-right: ($spacer * 2);
 			}
 		}
 	}
@@ -379,10 +387,18 @@
 
 		// Media queries
 		@include media-breakpoint-down(xs) {
-			padding: $btn-padding-y-lg-mobile ( $btn-padding-x-lg-mobile + $btn-back-to-app-icon-size + $spacer ) $btn-padding-y-lg-mobile $btn-padding-x-lg-mobile;
+			padding: $btn-padding-y-lg-mobile
+				(
+					$btn-padding-x-lg-mobile + $btn-back-to-app-icon-size +
+						$spacer
+				)
+				$btn-padding-y-lg-mobile $btn-padding-x-lg-mobile;
 		}
 		@include media-breakpoint-up(md) {
-			padding-right: ( $btn-padding-x-lg + $btn-back-to-app-icon-size + ( $spacer * 7.75 ) );
+			padding-right: (
+				$btn-padding-x-lg + $btn-back-to-app-icon-size +
+					($spacer * 7.75)
+			);
 		}
 
 		.btn__icon {
@@ -435,7 +451,7 @@
 			left: 10px;
 
 			& + .btn__text {
-				margin-left: ( $spacer * 0.5 );
+				margin-left: ($spacer * 0.5);
 			}
 		}
 
@@ -443,14 +459,14 @@
 			right: 10px;
 
 			& + .btn__text {
-				margin-right: ( $spacer * 0.5 );
+				margin-right: ($spacer * 0.5);
 			}
 		}
 
 		&--alone {
 			position: relative;
 			width: $btn-width-icon-alone;
-			padding: ( $spacer * 0.25 );
+			padding: ($spacer * 0.25);
 		}
 	}
 
@@ -460,7 +476,7 @@
 
 		.btn__icon {
 			position: static;
-			margin-left: ( $spacer * 0.5 );
+			margin-left: ($spacer * 0.5);
 			margin-right: 0;
 		}
 	}
@@ -534,7 +550,6 @@
 		padding: $spacer;
 		line-height: 1;
 	}
-
 
 	&.btn-facebook,
 	&.btn-google {
