--- a/src/common/ui/card/card.component.scss
+++ b/src/common/ui/card/card.component.scss
@@ -5,17 +5,15 @@
  */
 
 // Core component import
-@use "sass:math";
+@use 'sass:math';
 
 @import 'src/assets/scss/01_base/base.scss';
 
 // Component variables
 @import 'card.component.variables.scss';
 
-
 // Bootstrap button import
 @import '~bootstrap/scss/card';
-
 
 .card {
 	align-items: center;
@@ -38,11 +36,11 @@
 	}
 
 	.card-tile__item {
-		margin-bottom: ( $spacer * 2 );
+		margin-bottom: ($spacer * 2);
 
 		// Media queries
 		@include media-breakpoint-up(md) {
-			padding: 0 ( $card-tile-item-spacer * 0.2 );
+			padding: 0 ($card-tile-item-spacer * 0.2);
 		}
 		@include media-breakpoint-up(xl) {
 			padding: $card-tile-item-spacer;
@@ -54,7 +52,7 @@
 		&:nth-child(-n + 3) {
 			// Media queries
 			@include media-breakpoint-up(xl) {
-				padding-top:  math.div($card-tile-item-spacer, 6) ;
+				padding-top: math.div($card-tile-item-spacer, 6);
 			}
 		}
 
@@ -66,7 +64,7 @@
 		}
 
 		&--last-item {
-			padding-bottom: ( $spacer * 0.5 );
+			padding-bottom: ($spacer * 0.5);
 			border-bottom: none;
 		}
 
