--- a/src/common/ui/indicator/indicator.component.scss
+++ b/src/common/ui/indicator/indicator.component.scss
@@ -10,7 +10,6 @@
 // Component variables
 @import 'indicator.component.variables.scss';
 
-
 .indicator {
 	display: inline-flex;
 	align-items: center;
@@ -32,13 +31,13 @@
 	}
 
 	.icon {
-		font-size: ( $indicator-font-size-mobil * 0.5 );
+		font-size: ($indicator-font-size-mobil * 0.5);
 		line-height: $indicator-line-height-mobil;
-		padding-right: ( $spacer * .75 );
+		padding-right: ($spacer * 0.75);
 
 		// Media queries
 		@include media-breakpoint-up(md) {
-			font-size: ( $indicator-font-size-tablet * 0.5 );
+			font-size: ($indicator-font-size-tablet * 0.5);
 			line-height: $indicator-line-height-tablet;
 		}
 	}
