--- a/src/common/ui/info-banner/info-banner.component.scss
+++ b/src/common/ui/info-banner/info-banner.component.scss
@@ -7,7 +7,6 @@
 // Core component import
 @import 'src/assets/scss/01_base/base.scss';
 
-
 .info-banner {
 	position: relative;
 	text-align: center;
@@ -16,7 +15,7 @@
 		width: 64px;
 		height: auto;
 		max-height: 64px;
-		margin-bottom: ( $spacer * .75 );
+		margin-bottom: ($spacer * 0.75);
 	}
 
 	&__title {
@@ -28,4 +27,3 @@
 
 	// }
 }
-
