--- a/src/common/ui/modal/modal.component.scss
+++ b/src/common/ui/modal/modal.component.scss
@@ -5,7 +5,7 @@
  */
 
 // Core component import
-@use "sass:math";
+@use 'sass:math';
 
 @import 'src/assets/scss/01_base/base.scss';
 
@@ -66,24 +66,24 @@
 	}
 
 	> :not(:last-child) {
-		margin-bottom: ( $spacer * 0.5 );
+		margin-bottom: ($spacer * 0.5);
 		margin-right: 0;
 
 		// Media queries
 		@include media-breakpoint-up(sm) {
 			margin-bottom: 0;
-			margin-right: ( $spacer / 3 );
+			margin-right: ($spacer / 3);
 		}
 	}
 
 	> :not(:first-child) {
-		margin-top: ( $spacer * 0.5 );
+		margin-top: ($spacer * 0.5);
 		margin-left: 0;
 
 		// Media queries
 		@include media-breakpoint-up(sm) {
 			margin-top: 0;
-			margin-left: ( $spacer / 3 );
+			margin-left: ($spacer / 3);
 		}
 	}
 }
@@ -101,7 +101,7 @@
 		@include reset-pa-ma;
 		font-family: $font-family-sans-serif;
 		color: $body-color;
-		font-size: ( $icon-size-px * 1.5 );
+		font-size: ($icon-size-px * 1.5);
 		z-index: $zindex-modal;
 	}
 
@@ -140,7 +140,7 @@
 
 		// Media queries
 		@include media-breakpoint-up(lg) {
-			padding: $modal-inner-padding-md ( $spacer * 4 );
+			padding: $modal-inner-padding-md ($spacer * 4);
 		}
 	}
 
@@ -150,7 +150,7 @@
 		margin-bottom: $spacer;
 
 		> :not(:last-child) {
-			margin-bottom: ( $spacer * 0.5 );
+			margin-bottom: ($spacer * 0.5);
 			margin-right: 0;
 		}
 
