--- a/src/common/ui/placeloader/placeloader.component.scss
+++ b/src/common/ui/placeloader/placeloader.component.scss
@@ -5,17 +5,16 @@
  */
 
 // Core component import
-@use "sass:math";
+@use 'sass:math';
 
 @import 'src/assets/scss/01_base/base.scss';
-
 
 .placeloader {
 	text-align: center;
 
 	&__wrapper {
 		position: relative;
-		min-height: ( $spacer * 2.5 );
+		min-height: ($spacer * 2.5);
 	}
 
 	&__holder {
@@ -27,10 +26,15 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		padding: $spacer ( $spacer * 0.5 );
+		padding: $spacer ($spacer * 0.5);
 		z-index: $zindex-placeloader-holder;
 		background-color: $white;
-		background: linear-gradient(90deg, rgba($white, 0) 0%, rgba($white, 1) 50%, rgba($white, 0) 100%);
+		background: linear-gradient(
+			90deg,
+			rgba($white, 0) 0%,
+			rgba($white, 1) 50%,
+			rgba($white, 0) 100%
+		);
 	}
 
 	&__symbol,
@@ -41,7 +45,7 @@
 
 	&__symbol {
 		position: relative;
-		width: ( 3 * $placeloader-circle-size ) + (  math.div($spacer, 3)  * 2 );
+		width: (3 * $placeloader-circle-size) + (math.div($spacer, 3) * 2);
 		height: $placeloader-circle-size;
 	}
 
@@ -52,9 +56,9 @@
 		height: $placeloader-circle-size;
 		border-radius: $placeloader-circle-radius;
 		border: 1px solid $placeloader-circle-color;
-		animation: loading .9s ease-in infinite;
-		opacity: .5;
-		transform: scale(.5);
+		animation: loading 0.9s ease-in infinite;
+		opacity: 0.5;
+		transform: scale(0.5);
 
 		&:nth-child(1) {
 			left: 0;
@@ -62,26 +66,27 @@
 		}
 
 		&:nth-child(2) {
-			left: $placeloader-circle-size +  math.div($spacer, 3) ;
-			animation-delay: .3s;
+			left: $placeloader-circle-size + math.div($spacer, 3);
+			animation-delay: 0.3s;
 		}
 
 		&:nth-child(3) {
-			left: $placeloader-circle-size +  math.div($spacer, 3)  + $placeloader-circle-size +  math.div($spacer, 3) ;
-			animation-delay: .6s;
+			left: $placeloader-circle-size + math.div($spacer, 3) +
+				$placeloader-circle-size + math.div($spacer, 3);
+			animation-delay: 0.6s;
 		}
 	}
 
 	&__text {
 		max-width: 90%;
-		padding:  math.div($spacer, 3)  ( $spacer * 0.5 );
+		padding: math.div($spacer, 3) ($spacer * 0.5);
 	}
 }
 
 @keyframes loading {
 	0% {
-		opacity: .5;
-		transform: scale(.5);
+		opacity: 0.5;
+		transform: scale(0.5);
 	}
 
 	50% {
