--- a/src/common/ui/supply-point/supply-point.component.variables.scss
+++ b/src/common/ui/supply-point/supply-point.component.variables.scss
@@ -4,12 +4,12 @@
  -
  */
 
-@use "sass:math";
+@use 'sass:math';
 
-$box-shadow-color:                   $font-text;
-$supply-point-label-font-size:       24px;
-$supply-point-label-line-height:      math.div(32, 24) ;
-$supply-point-title-font-size:       26px;
-$supply-point-title-line-height:      math.div(48, 36) ;
-$supply-point-title-line-height-px:  48px;
-$supply-point-icon-font-size:        40px;
+$box-shadow-color: $font-text;
+$supply-point-label-font-size: 24px;
+$supply-point-label-line-height: math.div(32, 24);
+$supply-point-title-font-size: 26px;
+$supply-point-title-line-height: math.div(48, 36);
+$supply-point-title-line-height-px: 48px;
+$supply-point-icon-font-size: 40px;
