--- a/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
+++ b/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
@@ -35,7 +35,7 @@
 <div class="row">
     <div class="col-12 col-xl-10 offset-xl-1">
         <div class="page-box">
-            <div *ngIf="formSent && !isForm"
+            <div *ngIf="formSent && isForm"
                  class="row">
                 <div class="col-12 col-md-6 offset-md-3">
                     <lnd-alert type="info"
