--- a/src/assets/scss/01_base/_variables.scss
+++ b/src/assets/scss/01_base/_variables.scss
@@ -183,6 +183,7 @@ $lists-margin-bottom:              $spacer;
 $list-decimal-padding-left:        ( $spacer * 2.25  );
 
 $circular-number-list-size:        48px;
+$modal-footer-margin-between:      8px;
 
 $checklist-lp-before-size:         50px;
 
