--- a/src/common/containers/history/detail-container/detail-container.component.html
+++ b/src/common/containers/history/detail-container/detail-container.component.html
@@ -23,9 +23,7 @@
                             text: 'Obnovit smlouvu'
                         }"
                 (customBannerAction)="restoreContractAction($event,supplyPoint, router)"
-            >
-                Obnovit smlouvu
-            </lnd-banner-ui>
+            ></lnd-banner-ui>
         </div>
         <div class="col-12 mb-5 text-center text-md-left mb-md-3 col-xl-10 offset-xl-1">
             <lnd-button
