--- a/src/common/ui/forms/field/field.component.html
+++ b/src/common/ui/forms/field/field.component.html
@@ -1,14 +1,33 @@
-<div
-    class="form-group"
-    [ngClass]="customFormGroupClass">
-    <div *ngIf="infoText"
-         class="form-control-info-wrapper">
+<div class="form-group" [ngClass]="customFormGroupClass">
+    <div *ngIf="infoText" class="form-control-info-wrapper">
         <span class="form-control-info">
             {{infoText}}
-            <svg class="form-control-info-beak" width="20px" height="17px" viewBox="0 0 20 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="Landing-page" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <g id="Video-LP-fallback" transform="translate(-1024.000000, -4326.000000)" fill="#7355A6">
-                        <path d="M1024,4326 L1041,4326 L1041,4338.17157 C1041,4339.27614 1040.10457,4340.17157 1039,4340.17157 C1038.46957,4340.17157 1037.96086,4339.96086 1037.58579,4339.58579 L1024,4326 L1024,4326 Z" id="Rectangle-Copy-12" transform="translate(1032.500000, 4334.500000) scale(-1, 1) translate(-1032.500000, -4334.500000) "></path>
+            <svg
+                class="form-control-info-beak"
+                width="20px"
+                height="17px"
+                viewBox="0 0 20 17"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+                <g
+                    id="Landing-page"
+                    stroke="none"
+                    stroke-width="1"
+                    fill="none"
+                    fill-rule="evenodd"
+                >
+                    <g
+                        id="Video-LP-fallback"
+                        transform="translate(-1024.000000, -4326.000000)"
+                        fill="#7355A6"
+                    >
+                        <path
+                            d="M1024,4326 L1041,4326 L1041,4338.17157 C1041,4339.27614 1040.10457,4340.17157 1039,4340.17157 C1038.46957,4340.17157 1037.96086,4339.96086 1037.58579,4339.58579 L1024,4326 L1024,4326 Z"
+                            id="Rectangle-Copy-12"
+                            transform="translate(1032.500000, 4334.500000) scale(-1, 1) translate(-1032.500000, -4334.500000) "
+                        ></path>
                     </g>
                 </g>
             </svg>
@@ -17,10 +36,9 @@
     <span
         *ngIf="type === 'LABEL'"
         class="form-control-text"
-        [ngClass]="customFieldClass">
-        <ng-container *ngIf="label">
-            {{label}}
-        </ng-container>
+        [ngClass]="customFieldClass"
+    >
+        <ng-container *ngIf="label"> {{label}} </ng-container>
         <ng-container *ngIf="labelTemplate">
             <ng-container *ngTemplateOutlet="labelTemplate"></ng-container>
         </ng-container>
@@ -39,35 +57,28 @@
         [class.custom-checkbox--switch]="type === 'SWITCH'"
         [class.select--inline-label]="inlineLabel"
         [ngClass]="customTypeClass"
-        [ngSwitch]="type">
-        <div
-            *ngIf="!!prependIcon"
-            class="input-group-prepend">
-            <span
-                class="icon input-group-icon"
-                [ngClass]="prependIcon">
-            </span>
+        [ngSwitch]="type"
+    >
+        <div *ngIf="!!prependIcon" class="input-group-prepend">
+            <span class="icon input-group-icon" [ngClass]="prependIcon"> </span>
         </div>
-        <div
-            *ngIf="!!prependButtonIcon"
-            class="input-group-prepend">
+        <div *ngIf="!!prependButtonIcon" class="input-group-prepend">
             <button
                 (click)="prependButtonAction.emit()"
                 type="button"
-                class="btn">
-                <span
-                    class="icon"
-                    [ngClass]="prependButtonIcon">
-                </span>
+                class="btn"
+            >
+                <span class="icon" [ngClass]="prependButtonIcon"> </span>
             </button>
         </div>
-        <div
-            *ngIf="!!prependText"
-            class="input-group-switch">
+        <div *ngIf="!!prependText" class="input-group-switch">
             <span
-                class="input-group-switch__text input-group-switch__text--prepend"
+                class="
+                    input-group-switch__text input-group-switch__text--prepend
+                "
                 [class.input-group-switch__text--active]="!checked"
-                [class.input-group-switch__text--disabled]="!!disabledField">
+                [class.input-group-switch__text--disabled]="!!disabledField"
+            >
                 {{ prependText }}
             </span>
         </div>
@@ -75,7 +86,8 @@
             class="form-control-wrapper"
             [class.focused-input]="inputFocused"
             [class.invalid-input]="(!!error && !!touched) && !inputFocused"
-            [class.disabled-input]="!!disabledField">
+            [class.disabled-input]="!!disabledField"
+        >
             <input
                 *ngSwitchDefault
                 #field
@@ -100,7 +112,7 @@
                 [readonly]="readonly"
                 [required]="required"
                 [attr.autocomplete]="autocomplete"
-                >
+            />
             <input
                 *ngSwitchCase="'NUMBER'"
                 #field
@@ -124,7 +136,7 @@
                 [readonly]="readonly"
                 [required]="required"
                 [attr.autocomplete]="autocomplete"
-            >
+            />
             <input
                 *ngSwitchCase="'PASSWORD'"
                 #field
@@ -148,13 +160,9 @@
                 [readonly]="readonly"
                 [required]="required"
                 [attr.autocomplete]="autocomplete"
-            >
-            <div
-                *ngIf="!!appendText"
-                class="input-group-append">
-                <span class="input-group-append__text">
-                    {{ appendText }}
-                </span>
+            />
+            <div *ngIf="!!appendText" class="input-group-append">
+                <span class="input-group-append__text"> {{ appendText }} </span>
             </div>
         </div>
         <input
@@ -175,27 +183,30 @@
             [id]="id"
             [ngClass]="customFieldClass"
             [(ngModel)]="value"
-            >
+        />
         <div
             *ngSwitchCase="'RADIOGROUP'"
             #field
             [id]="id"
-            [ngClass]="radioGroupClass">
+            [ngClass]="radioGroupClass"
+        >
             <span
                 class="control-label radiogroup-control-label"
                 (click)="labelClick(options[0].key)"
-                *ngIf="!hideLabel">
-                    <ng-container *ngIf="label">
-                        {{label}}
-                    </ng-container>
-                    <ng-container *ngIf="labelTemplate">
-                        <ng-container *ngTemplateOutlet="labelTemplate"></ng-container>
-                    </ng-container>
+                *ngIf="!hideLabel"
+            >
+                <ng-container *ngIf="label"> {{label}} </ng-container>
+                <ng-container *ngIf="labelTemplate">
+                    <ng-container
+                        *ngTemplateOutlet="labelTemplate"
+                    ></ng-container>
+                </ng-container>
             </span>
             <div
                 *ngFor="let option of options"
                 class="custom-control custom-radio"
-                [ngClass]="radioGroupItemClass">
+                [ngClass]="radioGroupItemClass"
+            >
                 <input
                     type="radio"
                     (blur)="blurAction($event)"
@@ -214,11 +225,13 @@
                     [ngClass]="customFieldClass"
                     [readonly]="readonly"
                     [value]="option.value"
-                    [required]="required">
+                    [required]="required"
+                />
                 <label
                     *ngIf="option.label"
                     class="custom-control-label"
-                    (click)="labelClick(option.key)">
+                    (click)="labelClick(option.key)"
+                >
                     {{ option.label }}
                 </label>
             </div>
@@ -244,7 +257,7 @@
             [(ngModel)]="value"
             [readonly]="readonly"
             [required]="required"
-            >
+        />
         <input
             *ngSwitchCase="'SWITCH'"
             #field
@@ -265,25 +278,28 @@
             [(ngModel)]="value"
             [readonly]="readonly"
             [required]="required"
-            >
+        />
         <div
             *ngSwitchCase="'TOGGLE'"
             #field
             [id]="id"
-            class="radio-group--switch">
+            class="radio-group--switch"
+        >
             <span
                 class="control-label radiogroup-control-label"
-                *ngIf="!hideLabel">
-                    <ng-container *ngIf="label">
-                        {{label}}
-                    </ng-container>
-                    <ng-container *ngIf="labelTemplate">
-                        <ng-container *ngTemplateOutlet="labelTemplate"></ng-container>
-                    </ng-container>
+                *ngIf="!hideLabel"
+            >
+                <ng-container *ngIf="label"> {{label}} </ng-container>
+                <ng-container *ngIf="labelTemplate">
+                    <ng-container
+                        *ngTemplateOutlet="labelTemplate"
+                    ></ng-container>
+                </ng-container>
             </span>
             <div
                 *ngFor="let option of options"
-                class="custom-control custom-radio custom-radio--switch">
+                class="custom-control custom-radio custom-radio--switch"
+            >
                 <input
                     type="radio"
                     (blur)="blurAction($event)"
@@ -302,11 +318,13 @@
                     [ngClass]="customFieldClass"
                     [readonly]="readonly"
                     [value]="option.value"
-                    [required]="required">
+                    [required]="required"
+                />
                 <label
                     *ngIf="option.label"
                     class="custom-control-label"
-                    (click)="labelClick(option.key)">
+                    (click)="labelClick(option.key)"
+                >
                     {{ option.label }}
                 </label>
             </div>
@@ -332,7 +350,7 @@
             [readonly]="readonly"
             [required]="required"
             [rows]="rows"
-            >
+        >
             {{ value }}
         </textarea>
         <select
@@ -354,12 +372,13 @@
             [ngClass]="customFieldClass"
             ([ngModel])="value"
             [required]="required"
-            >
+        >
             <option
                 *ngFor="let option of options"
                 [value]="option.key"
                 [disabled]="option.disabled"
-                [selected]="option.key === value">
+                [selected]="option.key === value"
+            >
                 {{ option.label }}
             </option>
         </select>
@@ -373,9 +392,7 @@
             [for]="id"
             (mousedown)="$event.preventDefault()"
         >
-            <ng-container *ngIf="label">
-                {{label}}
-            </ng-container>
+            <ng-container *ngIf="label"> {{label}} </ng-container>
             <ng-container *ngIf="labelTemplate">
                 <ng-container *ngTemplateOutlet="labelTemplate"></ng-container>
             </ng-container>
@@ -389,52 +406,45 @@
             (click)="labelClick()"
             [for]="id"
         >
-            <ng-container *ngIf="label">
-                {{label}}
-            </ng-container>
+            <ng-container *ngIf="label"> {{label}} </ng-container>
             <ng-container *ngIf="labelTemplate">
                 <ng-container *ngTemplateOutlet="labelTemplate"></ng-container>
             </ng-container>
         </label>
         <span
             *ngIf="type === 'SELECT'"
-            class="icon icon--arrow-down select-icon">
+            class="icon icon--arrow-down select-icon"
+        >
         </span>
-        <div
-            *ngIf="!!appendIcon"
-            class="input-group-append">
-            <span
-                class="icon input-group-icon"
-                [ngClass]="appendIcon">
-            </span>
+        <div *ngIf="!!appendIcon" class="input-group-append">
+            <span class="icon input-group-icon" [ngClass]="appendIcon"> </span>
         </div>
-        <div
-            *ngIf="!!appendButtonIcon"
-            class="input-group-append-help">
+        <div *ngIf="!!appendButtonIcon" class="input-group-append-help">
             <button
                 (click)="appendButtonAction.emit()"
                 type="button"
-                class="btn">
-                <span
-                    class="icon"
-                    [ngClass]="appendButtonIcon">
-                </span>
+                class="btn"
+            >
+                <span class="icon" [ngClass]="appendButtonIcon"> </span>
             </button>
         </div>
         <div
             *ngIf="!!subtext || subtextTemplate"
             class="input-subtext"
             [ngClass]="customInputSubtextClass"
-            [class.input-subtext--disabled]="!!disabledField">
+            [class.input-subtext--disabled]="!!disabledField"
+        >
             {{ subtext }}
             <ng-container *ngIf="subtextTemplate">
-                <ng-container *ngTemplateOutlet="subtextTemplate"></ng-container>
+                <ng-container
+                    *ngTemplateOutlet="subtextTemplate"
+                ></ng-container>
             </ng-container>
         </div>
         <div
             *ngIf="!!getErrorMessage() && showErrorMessage"
             [innerHtml]="getErrorMessage()"
-            class="invalid-feedback">
-        </div>
+            class="invalid-feedback"
+        ></div>
     </div>
 </div>
