--- a/src/assets/scss/front.scss
+++ b/src/assets/scss/front.scss
@@ -33,7 +33,7 @@
 /* ------------------------- */
 /*   4. MODULES              */
 /* ------------------------- */
-
+@import '04_modules/ccstyles';                                              // Cookie bar
 
 
 /* ------------------------- */
