feature/PXEPR-1484-fix2

--- a/src/app/pages/public/patterns-of-contracts/patterns-of-contracts.component.html
+++ b/src/app/pages/public/patterns-of-contracts/patterns-of-contracts.component.html
@@ -140,6 +140,7 @@
                                     <div class="pdf-holder pdf-holder--large">
                                         <pxe-pdf-viewer
                                             #pxePdfViewer
+                                            *lndOnlySsr
                                             [openFile]="false"
                                             [viewBookmark]="false"
                                             zoom="page-width"
